# scrapka

./: .env  .gitignore  README.md  google_maps_scraper.py  main.py  output.csv  pyproject.toml  queries.csv  script.js  server.py  start.sh  test_export.py
data/: search_ua_params.csv
extensions/tampermonkey/: cache.js  manifest.json  page.js
extensions/tampermonkey-5.4.1/: background.js  content.js  extension.js
extensions/tampermonkey-5.4.1/_locales/da/: messages.json
extensions/tampermonkey-5.4.1/_locales/el/: messages.json
extensions/tampermonkey-5.4.1/_locales/es/: messages.json
extensions/tampermonkey-5.4.1/_locales/hi/: messages.json
extensions/tampermonkey-5.4.1/_locales/hu/: messages.json
extensions/tampermonkey-5.4.1/_locales/id/: messages.json
extensions/tampermonkey-5.4.1/_locales/it/: messages.json
extensions/tampermonkey-5.4.1/_locales/nl/: messages.json
extensions/tampermonkey-5.4.1/_locales/pl/: messages.json
extensions/tampermonkey-5.4.1/_locales/pt_BR/: messages.json
extensions/tampermonkey-5.4.1/_locales/pt_PT/: messages.json
extensions/tampermonkey-5.4.1/_locales/ru/: messages.json
extensions/tampermonkey-5.4.1/_locales/vi/: messages.json
extensions/tampermonkey/_locales/ar/: messages.json
extensions/tampermonkey/_locales/cs/: messages.json
extensions/tampermonkey/_locales/de/: messages.json
extensions/tampermonkey/_locales/en/: messages.json
extensions/tampermonkey/_locales/fr/: messages.json
extensions/tampermonkey/_locales/hr/: messages.json
extensions/tampermonkey/_locales/ja/: messages.json
(+8 files in other folders)
